syntax = "proto3";

package chat;

option java_package = "com.chatapp.gprc.chat";
option java_multiple_files = true;

service ChatService {
  rpc SendMessage(MessageRequest) returns (MessageResponse) {};
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string reply = 1;
}